fixed overflow bug

--- a/source/sass/review.scss
+++ b/source/sass/review.scss
@@ -54,8 +54,10 @@
       display: inline-block;
       width: 187px;
       height: 187px;
+      vertical-align: middle;
+      margin-right: 20px;
 
-      vertical-align: bottom;
+      transform: none;
     }
   }
 
